<resources>
    <string name="app_name">TabSwipe</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <string name="title_activity_page_view">PageViewActivity</string>
    <string name="btn_submit_text">Submit</string>
    <string name="btn_add_text">Add</string>
    <string name="item_name_text">Item Name</string>
    <string name="item_desc_text">Item Description</string>
    <string name="item_qty_text">Item Quantity</string>
    <string name="title_activity_splitwise_login">SplitwiseLogin</string>
    <string name="title_activity_buy_list_detail_view">BuyListDetailViewActivity</string>

    <string name="application_id">JCxaf77cY9ywDUlVXq5imFqv0OojSyfaPERw3VjP</string>
    <string name="client_id">FvaOAWfLwP87LwXb6Ko9RlkCwtSdeSEZUwIeHFUV</string>
    <string name="title_activity_login">Login</string>

    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="text_login_btn">Login</string>
    <string name="text_signup_btn">Sign Up</string>
    <string name="signup_form_incomplete">All fields are mandatory</string>
    <string name="login_failed">Incorrect email id or password</string>

    <!-- Settings tab -->
    <string-array name="list_settings">
        <item>Logout</item>
    </string-array>

</resources>
